@@ -1,3 +1,7 @@
+2022-02-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCsymt.c (leaveBlockScope): fix bug #3289
+
 2022-02-09 Gabriele Gorla <gorlik@yahoo.com>
 
 	* sdcc/src/mos6502/gen.c:
